feat(sinks): implement ILogSink base class and ConsoleSink with isatty detection, stderr/stdout routing, ANSI color support, and 20 unit tests

--- a/br_logger_core/tests/CMakeLists.txt
+++ b/br_logger_core/tests/CMakeLists.txt
@@ -6,6 +6,7 @@ set(TEST_SOURCES
     test_log_context.cpp
     test_pattern_formatter.cpp
     test_json_formatter.cpp
+    test_console_sink.cpp
     test_logger_integration.cpp
     test_fixed_vector.cpp
     test_timestamp.cpp
