feat(core): implement LoggerBackend with MPSC ring buffer consumer, progressive wait strategy, multi-sink dispatch, and 9 unit tests

--- a/br_logger_core/tests/CMakeLists.txt
+++ b/br_logger_core/tests/CMakeLists.txt
@@ -11,6 +11,7 @@ set(TEST_SOURCES
     test_ring_memory_sink.cpp
     test_rotating_file_sink.cpp
     test_daily_file_sink.cpp
+    test_backend.cpp
     test_logger_integration.cpp
     test_fixed_vector.cpp
     test_timestamp.cpp
