--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,10 @@
 cmake_minimum_required(VERSION 3.16)
 project(br_logger VERSION 1.0.0 LANGUAGES CXX)
 
+option(BR_LOG_BUILD_TESTS "Build unit tests" OFF)
+
+if(BR_LOG_BUILD_TESTS)
+    enable_testing()
+endif()
+
 add_subdirectory(br_logger_core)
