--- a/examples/basic_cpp/CMakeLists.txt
+++ b/examples/basic_cpp/CMakeLists.txt
@@ -1,6 +1,2 @@
-cmake_minimum_required(VERSION 3.16)
-project(br_logger_basic_example LANGUAGES CXX)
-
-# find_package(br_logger_core REQUIRED)
-# add_executable(basic_example main.cpp)
-# target_link_libraries(basic_example PRIVATE br_logger_core)
+add_executable(basic_example main.cpp)
+target_link_libraries(basic_example PRIVATE br_logger_core)
