feat(ros2): implement ROS2 extension layer — context provider, sink, macros, and bridge
- Task 5.1: ROS2ContextProvider injects 6 global tags (node, namespace, domain_id, package, executable, rmw)
- Task 5.2: ROS2Sink bridges LogEntry to rcutils_log() with severity mapping
- Task 5.3: Scoped tag macros for subscription/service/timer/action callbacks
- Task 5.4: init()/shutdown() one-call setup with configurable BridgeConfig
- Task 5.5: ament_cmake CMakeLists.txt + package.xml for ROS2 package integration
- BR_LOG_BUILD_ROS2 option added to top-level CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,11 @@ endif()
 
 add_subdirectory(br_logger_core)
 
+option(BR_LOG_BUILD_ROS2 "Build ROS2 extension layer" OFF)
+if(BR_LOG_BUILD_ROS2)
+    add_subdirectory(br_logger_ros2)
+endif()
+
 option(BR_LOG_BUILD_EXAMPLES "Build examples" OFF)
 
 if(BR_LOG_BUILD_EXAMPLES)
