fix(core): resolve LOG_SCOPED_TAG macro redeclaration and -Wformat-security warning
- LOG_SCOPED_TAG: use __COUNTER__ instead of __LINE__ to avoid variable name
  collision when multiple instances used in same macro expansion
- LogImpl: handle empty Args pack with direct memcpy to fix -Wformat-security
  when fmt has no arguments

Files: log_context.hpp, logger.hpp

--- a/examples/ros2_node/CMakeLists.txt
+++ b/examples/ros2_node/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.16)
 project(br_logger_ros2_example LANGUAGES CXX)
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
